<resources>
    <string name="app_name">Odya</string>
    <string name="error_api_key" translatable="false">No API key</string>
    <string name="search_a_place">Search for a Place</string>
    <string name="text_login_kakao">카카오로 로그인</string>
    <string name="login_onboarding_odya_main">저번에 너가 갔던 그곳,\n어디야?</string>
    <string name="login_onboarding_odya_detail">친구가 방문했던 장소를\n쉽게 찾아봐요</string>
    <string name="login_onboarding_journal_main">지도에 쓰는\n나의 인생장소 여행일지</string>
    <string name="login_onboarding_journal_detail">오댜에서 기억에 남는 장소들을\n방문하고 공유해보세요</string>
    <string name="login_onboarding_route_main">한 눈에 담아보는\n나의 여행 동선</string>
    <string name="login_onboarding_route_detail">동선을 보여드려요</string>
    <string name="login_start_odya">오댜 시작하기</string>
    <string name="go_back_step">뒤로가기</string>
    <string name="go_next_step">다음으로</string>
    <string name="login_consent_app">더 나은 서비스를 위해서 \n권한동의가 필요해요</string>
    <string name="login_consent_app_detail">권한을 허용하지 않으면 일부 서비스가 제한 될 수 있습니다.</string>
    <string name="login_consent_camera">카메라</string>
    <string name="login_consent_camera_detail">촬영과 이미지 등 콘텐츠를 사용 할 수 있어요</string>
    <string name="login_consent_record">기기 및 앱 기록</string>
    <string name="login_consent_record_detail">여행 동선을 간편하게 기록 할 수 있어요</string>
    <string name="login_consent_gps">GPS</string>
    <string name="login_consent_gps_detail">여행일지와 커뮤니티에 장소를 태그할 수 있어요</string>
    <string name="login_consent_storage">저장소 접근 권한</string>
    <string name="login_consent_storage_detail">기기내에 이미지 파일을 업로드할 수 있어요</string>
    <string name="login_consent_push">앱 푸쉬 알림</string>
    <string name="login_consent_push_detail">게시물의 오댜, 댓글, 캐그 상태를 알 수 있어요</string>
    <string name="login_consent_contact">연락처</string>
    <string name="login_consent_contact_detail">연락처 기반 친구 추천을 받을 수 있어요</string>
    <string name="login_consent_privacy">개인정보 이용 동의</string>
    <string name="login_consent_privacy_detail">어쩌구 저쩌구 어쩌구 저쩌구 어쩌구 저쩌구 어쩌구 저쩌구 어쩌구 저쩌구 어쩌구 저쩌구 어쩌구 저쩌구</string>
    <string name="login_terms_consent">동의하기</string>
    <string name="login_what_name">오댜에서 활동할 \n이름을 알려주세요!</string>
    <string name="login_what_name_detail">최소 2자~최대 8자, 특수문자 불가능</string>
    <string name="login_name_hint">홍길동</string>
    <string name="login_who_you">%s님이\n궁금해요!</string>
    <string name="login_who_you_warning">성별과 생년월일은 수정할 수 없어요\n정확한 정보를 입력해 주세요!</string>
    <string name="login_birth_hint">생년월일</string>
    <string name="login_gender_hint">성별</string>
    <string-array name="login_gender">
        <item>성별</item>
        <item>남성</item>
        <item>여성</item>
    </string-array>
    <string name="login_loading">메인페이지를\n생성중이에요</string>
    <string name="sign_complete">등록 완료</string>
    <string name="login_topic_sea">바다여행</string>
    <string name="login_topic_camping">캠핑여행</string>
    <string name="login_topic_hobby">취미여행</string>
    <string name="login_topic_food">식도락</string>
    <string name="login_topic_rest">휴양지</string>
    <string name="login_topic_winter">겨울여행</string>
    <string name="login_topic_summer">여름여행</string>
    <string name="login_topic_flower">꽃놀이</string>
    <string name="login_topic_fall">가을여행</string>
    <string name="login_topic_festival">지역축제</string>
    <string name="login_topic_family">가족여행</string>
    <string name="login_topic_couple">커플여행</string>
    <string name="login_topic_alone">나홀로여행</string>
    <string name="login_topic_country">촌캉스</string>
    <string name="sign_up">등록하기</string>
    <string name="login_consent_all">전체 동의</string>
    <string name="login_random_name">랜덤 닉네임</string>
    <string name="login_preview_third_title">한 눈에 담아보는\n나의 여행 동선</string>
    <string name="login_preview_third_content">동선을 보여드려요</string>
    <string name="login_preview_third_start">오댜 시작하기</string>
    <string name="text_home">홈</string>
    <string name="text_memory">내추억</string>
    <string name="text_feed">피드</string>
    <string name="text_mypage">내정보</string>
    <string name="edit_text_birth">%1d년 %2d월 %3d일</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friend_manage_title">친구 관리</string>
    <string name="friend_manage_follower">팔로워</string>
    <string name="friend_manage_following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="following">팔로잉</string>
    <string name="hint_find_friend">친구를 찾아보세요!</string>
    <string name="friend_manage_following_delete_title">팔로잉을 취소하시겠습니까?</string>
    <string name="friend_manage_following_delete_content">팔로잉 취소는 알림이 가지 않으며,\n커뮤니티 게시글 등의 구독이 취소됩니다.</string>
    <string name="friend_manage_cancel">취소</string>
    <string name="friend_manage_delete">삭제</string>
    <string name="friend_manage_follower_delete_title">팔로워를 삭제하시겠습니까?</string>
    <string name="friend_manage_follower_delete_content">팔로워 삭제는 알림이 가지 않으며,\n삭제 시 특정 여행일지 및 게시글이 노출되지 않습니다.</string>
    <string name="popular_spot_title">인기 여행일지</string>
    <string name="popular_spot_hot">HOT🔥</string>
    <string name="mayknow_friend_title">알 수도 있는 친구</string>
    <string name="create_review_title">리뷰 작성</string>
    <string name="edit_review_title">리뷰 수정</string>
    <string name="review_detail_hint">리뷰를 작성해주세요(30자 이내)</string>
    <string name="create_review_register">등록하기</string>
    <string name="edit_review_register">수정하기</string>
    <string name="item_update_review">리뷰 수정</string>
    <string name="item_delete_review">리뷰 삭제</string>
    <string name="item_report_review">신고하기</string>
    <string name="post_travel_log_title">여행일지 작성하기</string>
    <string name="post_travel_log_info">여행정보</string>
    <string name="post_travel_log_name_hint">여행일지 이름</string>
    <string name="post_travel_log_friends">함께 간 친구</string>
    <string name="post_travel_log_friends_count">외 %d명</string>
    <string name="post_travel_log_daily">여행일지 및 사진</string>
    <string name="post_travel_log_daily_day">Day %d</string>
    <string name="post_travel_log_daily_contents_hint">여행일지를 작성해주세요</string>
    <string name="post_travel_log_daily_delete"><u>삭제하기</u></string>
    <string name="post_travel_log_daily_place">장소 태그하기</string>
    <string name="post_travel_log_daily_add">일정 추가하기</string>
    <string name="post_travel_log_daily_save">임시저장</string>
    <string name="post_travel_log_daily_post">등록하기</string>
    <string name="post_travel_log_upload_feed">공개 여부</string>
    <string name="post_travel_log_daily_picture_count">%d / %d</string>
    <string name="update_travel_log_title">여행일지 편집하기</string>
    <string name="update_travel_log_complete">수정 완료</string>
    <string name="update_travel_log">편집하기</string>
    <string name="journal_memory_last_travel">%s님\n지난 여행을 다시 볼까요?</string>
    <string name="journal_memory_my_travel">내 여행일지</string>
    <string name="journal_memory_my_travel_date">%s ~ %s</string>
    <string name="journal_memory_bookmark_travel">즐겨찾는 여행일지</string>
    <string name="journal_memory_tag_travel">태그된 여행일지</string>
    <string name="journal_memory_my_review">내가 쓴 한줄 리뷰</string>
    <string name="journal_detail_more_friends">더보기</string>
    <string name="journal_detail_all_journal">전부 펼처보기</string>
    <string name="journal_detail_day">Day %d</string>
    <string name="journal_detail_friends">함께 간 친구</string>
    <string name="journal_delete_title">해당 여행일지를 삭제할까요?</string>
    <string name="journal_content_delete_title">해당 날짜의 여행일지를 삭제할까요?</string>
    <string name="journal_delete_content_message">삭제된 내용은 복구될 수 없습니다.</string>
    <string name="journal_delete_message">삭제된 내용은 복구될 수 없습니다.</string>
    <string name="journal_delete_negative">취소</string>
    <string name="journal_delete_positive">삭제</string>
    <string name="travel_friend_title">함께 간 친구</string>
    <string name="travel_friend_search">닉네임 검색</string>
    <string name="travel_friend_complete">완료</string>
    <string name="select_place_title">장소 태그하기</string>
    <string name="select_place_search">장소를 검색해보세요</string>
    <string name="date_picker_cancel">취소</string>
    <string name="date_picker_complete">확인</string>
    <string name="date_picker_year">%d년</string>
    <string name="date_picker_date">%d월 %d일 (%s)</string>
    <string name="date_picker_daily">%d년 %d월 %d일 %s</string>
    <string name="date_picker_daily_empty">날짜를 선택해주세요</string>
    <string name="post_travel_log_registration_modal_title">작성한 여행일지를\n등록하시겠습니까?</string>
    <string name="post_travel_log_registration_modal_negative">취소</string>
    <string name="post_travel_log_registration_modal_positive">등록</string>
    <string name="visibility_title">접근권한</string>
    <string name="visibility_all">전체공개</string>
    <string name="visibility_friend">친구공개</string>
    <string name="visibility_private">비공개</string>
    <string name="feed_post_content_size">%d</string>
    <string name="feed_post_image_update">사진편집</string>
    <string name="feed_date_now">방금전</string>
    <string name="feed_date_today">오늘</string>
    <string name="feed_date_days">%d일전</string>
    <string name="place_score">%.1f</string>
    <string name="place_experienced_friend_count">내 친구 %d명이 다녀갔어요!</string>
    <string name="place_review">한줄리뷰</string>
    <string name="place_how_about">%s의 방문 경험은 어떠셨나요?</string>
    <string name="place_review_count">리뷰 총 %d개</string>
    <string name="place_recent_review_sort">최신순</string>
    <string name="place_write_review">리뷰 작성</string>
    <string name="place_my_review">내가 작성한 리뷰</string>
    <string name="place_more_review">댓글 더보기</string>
    <string name="place_journey">여행일지</string>
    <string name="place_journey_date">%s ~ %s</string>
    <string name="place_my_journal">나의 여행일지</string>
    <string name="place_journal_more_friend">더 보기</string>
    <string name="place_friend_journal">친구의 여행일지</string>
    <string name="place_recommend_journal">추천 여행일지</string>
    <string name="place_no_journal">여행일지가 없어요.</string>
    <string name="place_no_review">아직 리뷰가 없어요</string>
    <string name="place_no_community">아직 개시물이 없어요</string>
    <string name="place_community">커뮤니티</string>
    <string name="place_main_popular_odya">지금 인기있는 오댜는?</string>
    <string name="place_main_only_my_odya">내 오댜만 보기</string>
    <string name="place_main_with_friend_odya">친구 오댜도 보기</string>
    <string name="place_main_search">⚡️어디에 가고싶으신가요?</string>
    <string name="place_main_search_cancel">취소</string>
    <string name="place_main_search_recent">최근검색</string>
    <string name="place_main_search_delete">모두삭제</string>
    <string name="profile_my_lifeshot">내 인생 샷</string>
    <string name="profile_friend_lifeshot">인생 샷</string>
    <string name="profile_rep_travel_journal">대표 여행일지</string>
    <string name="profile_bookmark_travel_jouranl">즐겨찾기 여행일지</string>
    <string name="profile_favorite_place">관심장소</string>
    <string name="profile_my_community">내 커뮤니티 활동</string>
    <string name="profile_total_travel_count">%s님은 &lt;span style=\"color:#FFD41F\">%d곳을&lt;/span> 여행하고,&lt;br>총 &lt;span style=\"color:#FFD41F\">%d개의&lt;/span> 여행일지를 작성했어요!</string>
    <string name="profile_bookmark_place">%d개의 관심장소 더보기</string>
    <string name="profile_image_select">앨범에서 사진 선택</string>
    <string name="profile_image_none">기본 이미지로 변경</string>
    <string name="profile_image_cancel">취소</string>
    <string name="profile_no_lifeshot_content">다녀온 장소의 인생샷을\n업로드 해주세요!</string>
    <string name="profile_no_lifeshot_add">인생샷 추가</string>
    <string name="profile_no_rep_journal">대표 여행일지가 없어요.</string>
    <string name="profile_no_journal">여행일지가 없어요.</string>
    <string name="feed_share">공유</string>
    <string name="feed_update">편집</string>
    <string name="feed_close">닫기</string>
    <string name="feed_delete">삭제</string>
    <string name="feed_travel_journal_cancel">취소</string>
    <string name="feed_travel_journal_visibility_title">해당 날짜의 여행일지를 공개로 변경할까요?</string>
    <string name="feed_travel_journal_visibility_content">공개된 여행일지만 연동 가능합니다.</string>
    <string name="feed_travel_journal_visibility_update">변경하기</string>
</resources>