<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.weit.presentation.ui.login.consent.device.LoginConsentDeviceViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/login_consent_app"
                android:textAppearance="@style/h3"
                android:textColor="@color/label_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_consent_app_detail"
                android:textAppearance="@style/detail1"
                android:textColor="@color/label_assistive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_consent_app" />

            <ImageView
                android:id="@+id/iv_login_consent_camera"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_consent_camera_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_login_consent_camera" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="36dp"
                android:text="@string/login_consent_camera"
                android:textAppearance="@style/body1"
                app:layout_constraintStart_toEndOf="@+id/iv_login_consent_camera"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_consent_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_camera_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_consent_camera_detail"
                android:textAppearance="@style/detail2"
                android:textColor="@color/label_assistive"
                app:layout_constraintStart_toStartOf="@id/tv_login_consent_camera"
                app:layout_constraintTop_toBottomOf="@id/tv_login_consent_camera" />

            <ImageView
                android:id="@+id/iv_login_consent_record"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_trip"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_consent_record_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_login_consent_record" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_record"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_consent_record"
                android:textAppearance="@style/body1"
                app:layout_constraintStart_toEndOf="@+id/iv_login_consent_record"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_consent_camera_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_record_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_consent_record_detail"
                android:textAppearance="@style/detail2"
                android:textColor="@color/label_assistive"
                app:layout_constraintStart_toStartOf="@id/tv_login_consent_record"
                app:layout_constraintTop_toBottomOf="@id/tv_login_consent_record" />

            <ImageView
                android:id="@+id/iv_login_consent_gps"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_gps"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_consent_gps_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_login_consent_gps" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_gps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_consent_gps"
                android:textAppearance="@style/body1"
                app:layout_constraintStart_toEndOf="@+id/iv_login_consent_gps"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_consent_record_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_gps_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_consent_gps_detail"
                android:textAppearance="@style/detail2"
                android:textColor="@color/label_assistive"
                app:layout_constraintStart_toStartOf="@id/tv_login_consent_gps"
                app:layout_constraintTop_toBottomOf="@id/tv_login_consent_gps" />

            <ImageView
                android:id="@+id/iv_login_consent_storage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_grid"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_consent_storage_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_login_consent_storage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_storage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_consent_storage"
                android:textAppearance="@style/body1"
                app:layout_constraintStart_toEndOf="@+id/iv_login_consent_storage"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_consent_gps_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_storage_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_consent_storage_detail"
                android:textAppearance="@style/detail2"
                android:textColor="@color/label_assistive"
                app:layout_constraintStart_toStartOf="@id/tv_login_consent_storage"
                app:layout_constraintTop_toBottomOf="@id/tv_login_consent_storage" />

            <ImageView
                android:id="@+id/iv_login_consent_push"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_bell"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_consent_push_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_login_consent_push" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_push"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_consent_push"
                android:textAppearance="@style/body1"
                app:layout_constraintStart_toEndOf="@+id/iv_login_consent_push"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_consent_storage_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_push_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_consent_push_detail"
                android:textAppearance="@style/detail2"
                android:textColor="@color/label_assistive"
                app:layout_constraintStart_toStartOf="@id/tv_login_consent_push"
                app:layout_constraintTop_toBottomOf="@id/tv_login_consent_push" />

            <ImageView
                android:id="@+id/iv_login_consent_contact"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_call"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_consent_contact_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_login_consent_contact" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_consent_contact"
                android:textAppearance="@style/body1"
                app:layout_constraintStart_toEndOf="@+id/iv_login_consent_contact"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_consent_push_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_consent_contact_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_consent_contact_detail"
                android:textAppearance="@style/detail2"
                android:textColor="@color/label_assistive"
                app:layout_constraintStart_toStartOf="@id/tv_login_consent_contact"
                app:layout_constraintTop_toBottomOf="@id/tv_login_consent_contact" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_consent_start_odya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/corners_all_8"
                android:onClickListener="@{() -> vm.goConsentPrivacy()}"
                android:text="@string/login_start_odya"
                android:textAppearance="@style/h6"
                android:textColor="@color/label_reversed_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_consent_contact_detail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
